apps/service/neural-meme/deploy-neural-meme-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neural-meme-v1
spec:
  replicas: 0
  selector:
    matchLabels:
      app: neural-meme-v1
  template:
    metadata:
      labels:
        app: neural-meme-v1
    spec:
      containers:
      - name: neural-meme-v1
        # https://github.com/maxwlang/neural-meme/releases/latest
        image: ghcr.io/maxwlang/neural-meme:v1.1.2
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
        resources:
          limits:
            memory: "256Mi"
            cpu: "1000m"
          requests:
            memory: "64Mi"
            cpu: "250m"
