apps/service/neural-meme/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neural-meme-identify-server
spec:
  selector:
    app: neural-meme-identify-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8338
  type: ClusterIP
